# SigIf4

./: .gitignore  CMakeLists.txt
design/: API Wiki.md  SigIfGen2.drawio  config.ini  config.json  timeline.drawio
design/interface/: ActionTable.json  CharacterParameterVersion.json  Detector.json  Failure.json  FailureConfig.json  FollowPhaseTable.json  IdentificationCode.json  LightStatus.json  PedestrianDetector.json  Phase.json  PhaseSequenceTable.json  PriorityConfig.json  RemoteControl.json  Schedule.json  SchemaTable.json  SemaphoreGroup.json  Time.json  TimeTable.json  TimingScheme.json  TrafficInfo.json  UnitParameter.json  Version.json  WorkMode.json  WorkStatus.json  test.cc  test.sh  tmp  tmp2.cc
src/: CMakeLists.txt  backend.cc  backend.h  conf_mgr.cc  conf_mgr.h  connection.h  instruction.h  instruction_manager.cc  instruction_manager.h  logger.cc  logger.h  main.bak  main.cc  receiver.h  server.h  variant_const.cc  variant_const.h
